# XMclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_Agent_Memory_Systems_Report.agent.outline.md  AI_Agent_Memory_Systems_Report.docx  AI_Agent_Memory_Systems_Report_FINAL.md  AI_Agent_Memory_Systems_Report_sec01.md  AI_Agent_Memory_Systems_Report_sec02.md  AI_Agent_Memory_Systems_Report_sec03.md  AI_Agent_Memory_Systems_Report_sec04.md  AI_Agent_Memory_Systems_Report_sec05.md  AI_Agent_Memory_Systems_Report_sec06.md  AI_Agent_Memory_Systems_Report_sec07.md  AI_Agent_Memory_Systems_Report_sec08.md  AI_Agent_Memory_Systems_Report_sec09.md  AI_Agent_Memory_Systems_Report_sec10.md  AI_Agent_Memory_Systems_Report_sec11.md  AI_Agent_Memory_Systems_Report_sec12.md  ARCHITECTURE_EFFICIENCY_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESEARCH_Jarvis_Level_Agent_2026.md  SECURITY.md  XMclaw_Audit_Report_2026.docx  XMclaw_Audit_Report_2026.md  XMclaw_Memory_Read_Write_Logic.md  XMclaw_Memory_System_Remediation_Plan.docx  XMclaw_Memory_System_Remediation_Plan.md  XMclaw_Performance_Foundation_Report_2026.docx  XMclaw_Performance_Foundation_Report_2026.md  XMclaw_Skill_System_Deep_Research_2026.converted.md  XMclaw_Skill_System_Deep_Research_2026.docx  XMclaw_修复完成报告_2026.md  XMclaw_记忆系统调研报告_2026-06-06.md  _fix.txt  (+57 more)
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-question.yml  config.yml
.github/workflows/: docker-publish.yml  python-ci.yml  python-publish.yml  release.yml  web-ci.yml
.tracker/: progress_tracker.py
agents/default/: AGENTS.md  PROFILE.md  SOUL.md  agent.example.json  agent.json  tasks.json
config/: mcporter.json
daemon/: config.example.json
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/fly/: fly.toml
deploy/launchd/: com.xmclaw.daemon.plist
deploy/systemd/: xmclaw.service
deploy/windows-service/: README.md  xmclaw_service.py
diagnosis/: _test_format_compat.py  _test_manifest_fields.py  _test_reload_bug.py  e2e_test.md  e2e_test_runner.py  format_compat.md  invoke_chain.md  test_invoke_chain.py  test_invoke_chain2.py
docs/: AGENTS_TEMPLATE.md  ANDROID_COMPANION_DESIGN_2026.md  ANDROID_COMPANION_DEV_GUIDE_2026.md  ANDROID_COMPANION_M4_EXAMPLES.md  ARCHITECTURE.md  AUDIT_2026-05-07_conflicts.md  AUDIT_2026-05-07_real_architecture.md  AUDIT_2026-05-10_PATHS_FE_BE.md  AUDIT_PASS_3_FINDINGS.md  BACKUP.md  CLI.md  COMPREHENSIVE_TRIPARTITE_AUDIT_2026.md  CONFIG.md  DEPLOY.md  DESKTOP.md  DEV_PLAN.md  DEV_ROADMAP.md  DOCTOR.md  EVENTS.md  EVOLUTION.md  EVOLUTION_HONEST_STATE.md  EXPERT_TEAM_DESIGN_2026.md  FRONTEND_BACKEND_ALIGNMENT.md  FRONTEND_DESIGN.md  FRONTEND_REWORK.md  HOOKS.md  INTEGRATIONS.md  JARVIS_ARCHITECTURE_V2.md  JARVIS_IMPLEMENTATION_PLAN.md  JARVIS_IMPLEMENTATION_PLAN_2026.md  JARVIS_PHASE_6_DESIGN.md  JARVIS_ROADMAP.md  MEMORY_ARCHITECTURE.md  MEMORY_EVOLUTION_REDESIGN.md  MISSION_CONTROL_DESIGN_2026.md  MULTI_AGENT.md  PLAN.md  PRODUCT_REDESIGN.md  PROJECT_DEFINITION_2026-05-10.md  REMEDIATION_PLAN_2026.md  (+21 more)
docs/architecture/: XMclaw_Architecture_Assessment_2026-05-09.md
docs/audit/: MULTI_AGENT_LOGIC_AUDIT_2026.md  (+7 more)
research/: memory_systems_cross_verification.md  memory_systems_dim01.md  memory_systems_dim02.md  memory_systems_dim03.md  memory_systems_dim04.md  memory_systems_dim05.md  memory_systems_dim06.md  memory_systems_dim07.md  memory_systems_dim08.md  memory_systems_dim09.md  memory_systems_dim10.md  memory_systems_dim11.md  memory_systems_dim12.md  memory_systems_insight.md  memory_systems_landscape.md  skill_autonomous_invocation.md  skill_composition_curriculum.md  skill_evaluation_evolution.md  skill_sharing_marketplace.md
scripts/: _update_frontend_step1.py  _update_frontend_step2.py  _update_mainjs.py  _update_mainjs_step3.py  _update_mainjs_v2.py  backfill_b211_embeddings.py  backfill_b219_sessions.py  build_exe.py  build_exe_fast.py  bundle_ui.py  check_import_direction.py  check_plugin_isolation.py  cleanup_identity_pollution.py  cleanup_memory_pollution.py  cleanup_skills.py  cleanup_smoke_test_facts.py  fetch_vendor.py  install.ps1  install.sh  lint_roadmap.py  migrate_dark_facts_to_misc.py  migrate_lessons_to_v2.py  migrate_memory_db_to_v2.py  migrate_persona_sections_zh.py  one_shot_strip_goal_anchor.py  probe_b200_complex.py  probe_b200_smoke.py  probe_b299_chain.json  probe_b299_chain.md  probe_b299_chain.py  probe_blackbox.py  scan_destructuring.py  scan_missing_atom_imports.py  setup.bat  smoke_memory_v2_e2e.py  startxmclaw.bat  test_changed.py  test_lanes.yaml  test_wechat_task.py  tunnel.ps1  (+5 more)
skills/: .skills_store_lock.json
tests/: _e2e_multi_turn_v2.py  _e2e_tool_chain.py  _e2e_tool_chain_frames.json  _e2e_tool_coverage.py  _e2e_tool_coverage_frames.json  _e2e_ws_multi_turn.py  _e2e_ws_multi_turn_frames.json  _e2e_ws_probe.py  _e2e_ws_probe_frames.json  _live_complex_probe.py  _live_memory_probe.py  _live_plan_todo.py  _live_tool_multistep.py  _live_tool_probe.py  _live_user_scenario.py  test_bash.py  test_cli_evo.py  test_config.py  test_evolution.py  test_evolution_api.py  test_evolution_canary.py  test_evolution_coherence.py  test_evolution_fail_closed.py  test_evolution_git_ops.py  test_evolution_meta_loop.py  test_evolution_retrospective.py  test_evolution_risk.py  test_evolution_safety.py  test_file_write.py  test_integration.py  test_journal.py  test_log_rotation.py  test_memory.py  test_memory_view_api.py  test_perception_layer.py  test_prompt_builder.py  test_reflection.py  test_registry.py  test_security.py  test_skills_api.py  (+6 more)
tools/: check_event_schema.py  check_import_direction.py
web/: README.md  index.html  main.js  main_new.js  package-lock.json  package.json  styles.css  vite.config.js  websocket.js
webui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
xmclaw/: __init__.py  __main__.py
xmclaw-companion/: HOW_TO_GET_APK.md  README.md  gradlew  local.properties  settings.gradle.kts
(+2890 files in other folders)
