[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmclaw"
version = "2.0.0.dev0"
description = "XMclaw — local-first, self-evolving AI agent runtime"
requires-python = ">=3.10"
# Phase 4.10 trimmed dependency list: removed rich / prompt-toolkit /
# pystray / Pillow (desktop tray deleted), playwright (v1 browser-tool),
# apscheduler (v1 evolution scheduler), slack-sdk / discord.py /
# python-telegram-bot (v1 integrations — v2 adds these back via the
# plugin SDK when needed), cryptography (v1 config encryption).
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "typer>=0.15.0",
    "openai>=1.60.0",
    "anthropic>=0.49.0",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pip-tools>=7.5.0",
]
# Optional extras for heavier capabilities. Installed only on demand so
# the base `pip install xmclaw` stays small.
#
#   pip install 'xmclaw[browser]' && playwright install chromium
#     -- lets the agent drive a headless Chromium (browser_open /
#        click / fill / screenshot / snapshot / eval).
#
#   pip install 'xmclaw[lsp]'
#     -- gives the agent code-navigation tools (lsp_hover /
#        lsp_definition) over python-lsp-server. Language-specific
#        servers for other languages land as separate extras.
browser = ["playwright>=1.48.0"]
lsp     = ["python-lsp-server>=1.12.0"]
all     = [
    "playwright>=1.48.0",
    "python-lsp-server>=1.12.0",
]

[project.scripts]
xmclaw = "xmclaw.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    # Build outputs, virtualenvs, caches.
    "dist/",
    "build/",
    ".venv/",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
