[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmclaw"
version = "1.0.0"
description = "XMclaw — local-first AI agent runtime with experimental, opt-in skill evolution"
requires-python = ">=3.10"
# Phase 4.10 trimmed dependency list: removed rich / prompt-toolkit /
# pystray / Pillow (desktop tray deleted), playwright (v1 browser-tool),
# apscheduler (v1 evolution scheduler), slack-sdk / discord.py /
# python-telegram-bot (v1 integrations — v2 adds these back via the
# plugin SDK when needed).
#
# Epic #16 Phase 2 re-added cryptography to base deps — the exit
# criterion (``grep -r "sk-" ~/.xmclaw/`` must miss) requires that
# ``set_secret`` has a Fernet-encrypted backend available out of the
# box. Shipping it as an opt-in extra would leave new installs
# plaintext-by-default, which defeats the whole point.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "typer>=0.15.0",
    "openai>=1.60.0",
    "anthropic>=0.49.0",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
    "questionary>=2.0.0",
    "cryptography>=42.0.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pip-tools>=7.5.0",
]
# Optional extras for heavier capabilities. Installed only on demand so
# the base `pip install xmclaw` stays small.
#
#   pip install 'xmclaw[browser]' && playwright install chromium
#     -- lets the agent drive a headless Chromium (browser_open /
#        click / fill / screenshot / snapshot / eval).
#
#   pip install 'xmclaw[lsp]'
#     -- gives the agent code-navigation tools (lsp_hover /
#        lsp_definition) over python-lsp-server. Language-specific
#        servers for other languages land as separate extras.
browser = ["playwright>=1.48.0"]
lsp     = ["python-lsp-server>=1.12.0"]
# Wave-27 fix-LAT2: persistent IPython kernel for the ``code_python``
# tool. Without these the tool falls back to one-shot subprocess (no
# state across calls — see the Jupyter-mental-model failure mode in
# xmclaw/providers/tool/kernel_pool.py module docstring).
kernel = [
    "jupyter_client>=8.0.0",
    "ipykernel>=6.0.0",
]
# Wave 27 / Memory v2: LanceDB-backed L1 facts + relations store.
# Replaces the sqlite-vec backend whose vec0 virtual table doesn't
# support real upsert (GitHub issues #127 / #26 / #186). LanceDB:
# native merge_insert, KNN-with-filter, Pydantic schema, columnar
# Arrow storage. Production at Netflix / Uber / Harvey at same
# workload (agent memory + RAG). See docs/MEMORY_EVOLUTION_REDESIGN.md.
# Lazy-imported by xmclaw/memory/v2 — `pip install xmclaw` without
# this extra still works (InMemory backend covers tests + CI).
memory-v2 = [
    "lancedb>=0.30.0",
    "pyarrow>=16",
]
# 2026-05-28 memory v3 phase 3.2: BM25 second-axis recall fused
# with the vector cosine path. Solves the chronic mediocre
# pure-vector recall on Chinese keywords and rare identifiers
# (the case OpenClaw LanceDB Pro plugin documented). Optional —
# without it, MemoryService.recall_hybrid silently degrades to
# pure-vector behaviour.
memory-bm25 = [
    "rank_bm25>=0.2.2",
]
# B-145: 双向聊天 channel adapters (飞书 + 钉钉 + 企微 + telegram)。
# Each picks lazy: only the channels the user enables in
# ``config.channels`` actually import their SDK at runtime.
#
# Granular per-channel extras (B-380): users running only one IM
# don't need to install all three SDKs. The aggregate ``channels``
# extra still pulls everything for convenience / docker images.
channels-feishu   = ["lark-oapi>=1.4.0"]
channels-dingtalk = ["dingtalk-stream>=0.20.0"]
channels-telegram = ["python-telegram-bot>=21.0"]
channels-discord  = ["discord.py>=2"]
channels-slack    = ["slack-bolt>=1.18", "slack-sdk>=3"]
channels = [
    "lark-oapi>=1.4.0",        # 飞书
    "dingtalk-stream>=0.20.0", # 钉钉
    "python-telegram-bot>=21.0",
    "discord.py>=2",           # B-381 Discord gateway
    "slack-bolt>=1.18",        # B-382 Slack Socket Mode
    "slack-sdk>=3",
]
# B-135: content tools — screenshot / image / clipboard / Office docs.
# pypdf is the PDF text-extractor; mss is the screenshot grabber;
# pyperclip handles clipboard; python-docx + openpyxl read Word/Excel.
# `pip install 'xmclaw[content]'` enables the full set.
content = [
    "mss>=9.0.0",
    "pyperclip>=1.9.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=11.0.0",
    # B-143: rss_fetch tool
    "feedparser>=6.0.0",
]
# B-389 (Sprint 2): Composio bridge — 7000+ pre-integrated SaaS tools
# (Gmail / Slack / GitHub / Notion / Linear / HubSpot / …) exposed as
# ToolProvider actions. Lazy-import: ``composio_core`` only loads when
# ``tools.composio.enabled`` flips on AND the agent actually calls a
# Composio action, so installs without this extra still boot cleanly.
# Per-app OAuth (Gmail / Slack / etc.) is handled in Composio's own
# CLI / dashboard at https://app.composio.dev — XMclaw consumes
# already-authorised entities, never initiates OAuth itself.
tools-composio = ["composio-core>=0.7"]
# 2026-05-12 桌面自动化 — 给 agent 装上鼠标键盘 + 屏幕截图 + 窗口控制。
# 单独成 extra 是因为依赖很重 (Pillow + pyscreeze + 平台桥接)：
#   * pyautogui — 跨平台鼠标键盘 + screenshot bridge
#   * mss       — fast多显示器截图，比 pyautogui 自带的快 10×
#   * pygetwindow — 窗口枚举 + 激活 (Windows 直接挂 win32, macOS 挂
#                  AppKit, Linux 需 X11 + python3-tk)。
# 启用方式: pip install 'xmclaw[computer-use]' + daemon/config.json
# 里 tools.computer_use.enabled=true。模块 docstring 描述了完整安全
# 模型 (三道闸: provider gate / PermissionLevel / FAILSAFE 强制开)。
computer-use = [
  "pyautogui>=0.9.54",
  "mss>=10.1.0",
  "pygetwindow>=0.0.9",
  # 2026-05-12 OCR for vision grounding (screen_ocr / find_on_screen /
  # click_on_text). RapidOCR is the ONNX-extracted version of PaddleOCR
  # — same model quality, 50 MB vs 300 MB, no GPU needed, best Chinese
  # accuracy per MB. Pure ONNX runtime, no PyTorch / paddle frameworks.
  # Pillow needed for image format conversions + screen_region_capture.
  "rapidocr-onnxruntime>=1.3.0",
  "Pillow>=10.0",
  "numpy>=1.24",
  # 2026-05-12 r2 — Windows-native UI Automation (accessibility tree).
  # Agent reads native app structure directly: WeChat / QQ / Office /
  # Explorer expose every button + textbox by name + automation_id.
  # ``ui_inspect`` dumps the tree, ``ui_click`` invokes by name —
  # way more reliable than OCR-then-coords for native apps. Windows
  # only; Linux / macOS will need AT-SPI / AXUIElement backends later.
  "uiautomation>=2.0; platform_system=='Windows'",
]
# 2026-05-12 媒体工具 — agent 录麦克风 / 拍摄像头 / 播音箱。
# 跟 [voice] 区分: voice 是 STT/TTS 后端模型 (faster-whisper /
# edge-tts), media 是 I/O 层 (录音 / 拍照 / 喇叭播放)。voice_listen
# 同时需要这俩。三个依赖各自:
#   * sounddevice  — 跨平台 PortAudio Python 绑定 (录音/播放)
#   * numpy        — sounddevice 需要 ndarray
#   * opencv-python — 跨平台摄像头 (Windows DirectShow / macOS
#                    AVFoundation / Linux V4L2 自动选)
#   * playsound    — 跨平台 mp3 播放 (mp3 兼容比 simpleaudio 好)
# 平台坑: macOS 首次调用触发 Microphone / Camera 隐私授权弹窗;
# Linux 需要 ``sudo apt install libportaudio2`` + user in ``video`` 组。
media = [
  "sounddevice>=0.4.7",
  "numpy>=1.24",
  "opencv-python>=4.8",
]
# B-388: voice extras — STT/TTS backends used by BuiltinTools and MediaTools.
# The [media] extra above is the I/O layer (mic / camera / speakers);
# these are the AI model backends. voice_listen needs BOTH [media] and
# one of these. Split so users who only need TTS (no local Whisper)
# don't pay the ~200 MB faster-whisper download.
voice-stt = ["faster-whisper>=1.1.0"]
voice-tts = ["edge-tts>=6.1.0"]
voice     = ["faster-whisper>=1.1.0", "edge-tts>=6.1.0"]
# Sprint 4 follow-up: LongMemEval real-corpus adapter pulls
# ``OpenMOSS/LongMemEval`` from HuggingFace via ``datasets``. Lazy-import
# inside ``xmclaw.eval.longmemeval_full.LongMemEvalSuite.load_tasks``
# means base installs without this extra still ``import xmclaw.eval``
# cleanly — only ``xmclaw eval run longmemeval`` requires it.
eval-hf = ["datasets>=3.0.0", "huggingface_hub>=0.25.0"]
# Jarvis Phase 6.6: ProcessWatcher uses psutil for PID-level
# CPU/memory/zombie/exit detection. Lazy-import inside
# ``ProcessWatcher.start()`` so installs without this extra still
# ``import xmclaw.cognition.process_watcher`` cleanly — the runtime
# error at start time has a clear ``pip install psutil`` hint.
cognition-process = ["psutil>=5.9"]
all     = [
    "playwright>=1.48.0",
    "python-lsp-server>=1.12.0",
    "mss>=9.0.0",
    "pyperclip>=1.9.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=11.0.0",
    "composio-core>=0.7",
]

[project.scripts]
xmclaw = "xmclaw.cli.main:app"

# Plugin entry-point groups (Epic #10). Third parties can publish
# checks for `xmclaw doctor --discover-plugins` by declaring their
# own pyproject entry like:
#
#   [project.entry-points."xmclaw.doctor"]
#   my-check = "my_pkg.doctor:MyCheck"
#
# where the right-hand side resolves to a
# xmclaw.cli.doctor_registry.DoctorCheck subclass or a zero-arg
# factory that returns one. See docs/DOCTOR.md for the protocol.

[tool.ruff]
line-length = 100
# Match `requires-python = ">=3.10"` above — lint/typecheck against the
# minimum supported version so we don't accidentally ship 3.11+ syntax
# (match statements on sets, `Self` without import, Exception groups
# without the try/except* guard) on a 3.10 user.
target-version = "py310"
extend-exclude = [
    # Build outputs, virtualenvs, caches.
    "dist/",
    "build/",
    ".venv/",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# B-386-followup: tests in tests/unit/ that need the real
# xmclaw.utils.secrets.get_secret resolver (env / file / keyring lookup
# fidelity) opt out of the autouse isolation fixture in
# tests/unit/conftest.py via this marker.
markers = [
    "real_secrets: test exercises the real get_secret resolver (opts out of unit-suite secrets isolation)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
